--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@ maximum-scale=1.0, user-scalable=no"
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link id="app-theme" rel="stylesheet" type="text/css" href="light.css" />
   </head>
-  <body>
+  <body class="body">
     <app-root></app-root>
   </body>
 </html>
